# tinymotion_backend

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yml  openapi.json  pyproject.toml
.github/workflows/: build-test-push.yml
CLI/cli/: index.html
alembic/: env.py  script.py.mako
alembic/versions/: 2c3b3a04809b_initialise.py  2fca15ca30b4_initialise_database.py  5c0c15165fcb_initialise_database.py  6a9b437831d7_initialise.py  73b608206922_add_video_size_to_video_table.py  7e4e5ac803ca_updating_infant_tables.py  81fcb28e154c_add_encrypted_file_hash_to_video_table.py  b447b46c2201_changes_for_videos.py
api/: index.html  redoc-e8746824.html
architecture/: index.html
cli/: index.html
deploy/: .env.example  .gitignore  .tinymotion.env.example  README.md  deployment.sh  docker-compose.yml  provision-infrastructure.yml  requirements.txt  requirements.yml  setup-backend.yml
deploy/config/swag/: tinymotion_backend.subdomain.conf  tinymotion_backend_test.subdomain.conf
deploy/files/: dot_env_example
deploy/templates/: docker-compose.yml.j2  dot_env.j2  infisical.json.j2  tinymotion-backend.sh.j2  tinymotion-infisical-logout.sh.j2  tinymotion_backend.subdomain.conf.j2
deploy/terraform/: main.tf  provider.tf  variables.tf
deploy/terraform/templates/: host.ini.tpl
deploy/vars/: backend.yml.example  example.yml
docker/: entrypoint.sh
docs/: api.md  architecture.md  cli.md  index.md
docs/reference/: cli.md
docs/tutorials/: creating-users-via-cli.md  deploy-backend.md
reference/cli/: index.html
scripts/: entrypoint.sh  gen_api_docs.py  gen_cli_docs.py  tinymotion-backend  tinymotion-backend-infisical  tinymotion-infisical-wrapper
search/: search_index.json
src/tinymotion_backend/: cli.py  custom_uvicorn_worker.py  database.py  main.py  models.py
tutorials/creating-users-via-cli/: index.html
tutorials/deploy-backend/: index.html
(+37 files in other folders)
